--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     {% load static %}
+    <!-- {% csrf_token %} -->
     <script type="module" crossorigin src="{% static './main.js' %}"></script>
     <link rel="stylesheet" crossorigin href="{% static 'css/main.css' %}">
 <script defer src="main.js"></script><link href="css/main.css" rel="stylesheet"></head>
